style: fix blockquote quotes overlap and spacing

--- a/public/styles/article-content.css
+++ b/public/styles/article-content.css
@@ -15,6 +15,10 @@
   margin-top: 0 !important;
 }
 
+.prose-article>blockquote:first-child {
+  margin-top: 64px !important;
+}
+
 .prose-article p,
 .prose-article li {
   font-size: 16px;
@@ -76,15 +80,18 @@
 .prose-article p+p,
 .prose-article p+ul,
 .prose-article p+ol,
-.prose-article p+blockquote,
 .prose-article ul+p,
 .prose-article ol+p,
-.prose-article blockquote+p,
 .prose-article h1+p,
 .prose-article h2+p,
 .prose-article h3+p,
 .prose-article h4+p {
   margin-top: 24px;
+}
+
+.prose-article p+blockquote,
+.prose-article blockquote+p {
+  margin-top: 64px;
 }
 
 .prose-article hr {
@@ -157,7 +164,8 @@
 
 .prose-article blockquote {
   position: relative;
-  margin: 24px auto 0;
+  z-index: 0;
+  margin: 64px auto 0;
   max-width: 600px;
   padding: 0.5rem;
   font-family: var(--font-special-elite), cursive;
@@ -172,6 +180,8 @@
 }
 
 .prose-article blockquote p {
+  position: relative;
+  z-index: 1;
   font: inherit;
   font-size: 1.8rem;
   color: #3f3f5a;
@@ -184,6 +194,7 @@
 .prose-article blockquote::before,
 .prose-article blockquote::after {
   position: absolute;
+  z-index: -1;
   color: #f1efe6;
   font-family: var(--font-special-elite), cursive;
   font-size: 8rem;
